--- a/zmeventnotification.ini
+++ b/zmeventnotification.ini
@@ -8,14 +8,14 @@ base_data_path=/var/lib/zmeventnotification
 # websocket connection which can dynamically control ES
 # behaviour 
 # Default is no
-use_escontrol_interface=no
+use_escontrol_interface=yes
 
 # this is where all escontrol admin overrides
 # will be stored.
 escontrol_interface_file=/var/lib/zmeventnotification/misc/escontrol_interface.dat
 
 # the password for accepting control interfaces
-escontrol_interface_password=!ESCONTROL_INTERFACE_PASSWORD
+escontrol_interface_password=password
 
 # If you see the ES getting 'stuck' after several hours
 # see https://rt.cpan.org/Public/Bug/Display.html?id=131058
@@ -39,14 +39,14 @@ port = 9000
 # If you are facing connection issues or SSL issues, put in your IP here
 # If you want to listen to multiple interfaces try 0.0.0.0
 
-#address = 1.2.3.4
+address = 0.0.0.0
 
 [auth]
 # Check username/password against ZoneMinder database (default: yes).
-enable = yes
+enable = no
 
 # Authentication timeout, in seconds (default: 20).
-timeout = 20
+timeout = 10
 
 [push]
 # This is to enable sending push notifications via any 3rd party service. 
