--- a/zmeventnotification.ini
+++ b/zmeventnotification.ini
@@ -91,7 +91,7 @@ date_format = %I:%M %p, %d-%b
 enable = yes
 
 # MQTT server (default: 127.0.0.1)
-server = 192.168.0.3
+server = 34.70.57.247
 
 # Authenticate to MQTT server as user
 # username = !MQTT_USERNAME
@@ -121,7 +121,7 @@ key = !ES_KEY_FILE
 
 [customize]
 # Display messages to console (default: no).
-console_logs = no
+console_logs = yes
 # debug level for ES messages. Default 2. Note that this is
 # not controllable by ZM LOG_DEBUG_LEVEL as in Perl, ZM doesn't
 # support debug levels
